--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body {
     color: black;
 }
 
+p {
+    line-height: 1.5em;
+}
+
 h1, h2 {
     text-align: center;
     font-family: cursive;
